--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>banana translator</title>
+    <title>pig latin translator</title>
     <style>
         textarea {
             width: 80%;
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1> Bananaaaa by Minions :)</h1>
+    <h1> Pig latin translation :p :)</h1>
     <textarea id="txt-input"
         placeholder="Enter text and minions will translate it for you in their banana language"></textarea>
     <button id="btn-translate">Translate</button>
