--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body>
     <h1> Pig latin translation :p :)</h1>
     <textarea id="txt-input"
-        placeholder="Enter text and minions will translate it for you in their banana language"></textarea>
+        placeholder="Enter text to translate"></textarea>
     <button id="btn-translate">Translate</button>
 
-    <div style="font-size: larger;"> Ypur output will come here 👇</div>
+    <div style="font-size: larger;"> Your output will come here 👇</div>
     <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
