--- a/index.html
+++ b/index.html
@@ -5,34 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pig latin translator</title>
-    <style>
-        textarea {
-            width: 80%;
-            height: 10vh;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-
-        #output {
-            border: 1px solid black;
-            height: 10vh;
-            width: 80%;
-            margin: 1rem;
-            padding: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1> Pig latin translation :p :)</h1>
-    <textarea id="txt-input"
-        placeholder="Enter text to translate"></textarea>
-    <button id="btn-translate">Translate</button>
+    <div class="card">
+        <h1> Pig latin translation :p</h1>
+        <textarea id="txt-input"
+            placeholder="type here..."></textarea>
+        <button id="btn-translate"><h3>Translate</h3></button>
 
-    <div style="font-size: larger;"> Your output will come here 👇</div>
-    <div id="output"></div>
-    <script src="app.js" type="text/javascript"></script>
+        <div class="output-caption"> <h3>Your output will come here 👇</h3></div>
+        <div id="output"></div>
+        <script src="app.js" type="text/javascript"></script>
+    </div>
 </body>
 
 </html>
